# TO_DO_LIST-PHASE-01

./: .gitignore  CLAUDE.md  CLEANUP_INSTRUCTIONS.md  CONNECTION_INFO.md  FINAL_VALIDATION.md  IMPLEMENTATION_SUMMARY.md  PHASE2-README.md  README.md  README_K8S_DEPLOYMENT.md  TROUBLESHOOTING_GUIDE.md  pyproject.toml
.github/workflows/: deploy.yml
.qwen/skills/context7-expert/: SKILL.md
.qwen/skills/fastapi-expert/: SKILL.md
.qwen/skills/mcp-python-design/: SKILL.md
.qwen/skills/neon-db-expert/: SKILL.md
.specify/memory/: constitution.md
Phase3-Chatbot/: PHASE3-README.md  README.md
Phase3-Chatbot/chatbot/hackaton2/: README.md
Phase4-Docker/: Dockerfile  PHASE4-README.md  README.md
backend/: Dockerfile.todo  initialize_db.py  migrate_conversation.py  test_backend_start.py  test_db.py
backend/src/: debug_main.py  main.py
backend/src/api/: auth.py  chat.py  todos.py
backend/src/services/: conversation_service.py  todo_service.py
chatbot_phase3/: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_backend.py  setup.py
chatbot_phase3/.github/workflows/: deploy.yml
chatbot_phase3/src/agents/: todo_agent.py
chatbot_phase3/src/api/: auth_middleware.py  chat.py
chatbot_phase3/src/database/: database.py
chatbot_phase3/src/mcp/: todo_tools.py
chatbot_phase3/src/services/: conversation_service.py
chatbot_phase3/src/services/models/: conversation.py  todo.py  user.py
frontend/: CONNECTION_CHANGES.md  Dockerfile  vercel.json
frontend/src/services/: api.ts
specs/: todo-chatbot-infrastructure-spec.md
specs/001-todo-console-app/: 01-add-task.md  02-list-tasks.md  03-update-task.md  04-delete-task.md  05-mark-task.md  06-cli-menu.md  07-error-handling.md  08-task-model.md  spec.md  tasks.md
specs/003-k8s-todo-chatbot/: blueprint.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/todo/: __init__.py  __main__.py  cli.py  task.py  todo_list.py
tests/: test_cli.py  test_task.py  test_todo_list.py
(+12 files in other folders)
